# python101

./: .gitignore  README.md  pyproject.toml
.github/workflows/: latex.yaml  lint.yaml  slides.yaml
presentation/: Tectonic.toml  day-2.tex  py-lecture.cls
presentation/introduction/: Tectonic.toml  main.tex
presentation/introduction/src/: countdown.py  employee.py  employee_2.py  mro.py  secret_counter.py  secret_instance_counter.py  types.py
presentation/introduction/src/src/: data_types.py  employee.py  employee_2.py  secret_class_counter.py
sildes/: day-1.tex  day-2.tex  introduction.tex
sildes/figs/: big data stack.odp
slides/: 01-introduction.md  02-io-and-modules.md  03-async-and-libraries.md  04-testing-and-best-practices.md
src/: Contact.py  MRO.py  Threading.py  automatic-subclasses.py  borg.py  count-lines.py  count-lines2.py  descriptors.py  echoServer.py  echoServer2.py  echoServer3.py  fields.py  flow-control.py  functions.py  garbage-collection.py  gcd.py  generator.py  inputs.py  int.py  introspection.py  iterators.py  lambda.py  lines.py  memoization.py  metaclass.py  overloading.py  pickling.py  plugin.py  preloading.py  properties.py  streams.py  sum.py  types.py
src/01-basics/: flow-control.py  gcd.py  inputs.py  int.py  sum.py
src/02-oop/: Contact.py  automatic-subclasses.py  fields.py  introspection.py  overloading.py  properties.py
src/03-advanced-oop/: MRO.py  descriptors.py  metaclass.py  plugin.py
src/04-functional/: functions.py  iterators.py  memoization.py
src/05-io-files/: count-lines.py  count-lines2.py  pickling.py
src/06-networking/: echoServer.py  echoServer2.py  echoServer3.py
src/07-memory/: garbage-collection.py  preloading.py
src/08-async/: async-basics.py  async-http.py  async-queue.py
src/09-libraries/: json-handling.py  pathlib-basics.py  requests-basics.py
src/10-testing/: conftest.py  pytest-basics.py  test-mocking.py
src/11-typing/: dataclasses-typing.py  generics.py  type-hints-basics.py
