[project]
name = "python101"
version = "2.0.0"
description = "Python 101 Workshop - Sample codes and educational materials"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
authors = [{ name = "Parham Alvani", email = "parham.alvani@gmail.com" }]
keywords = ["python", "education", "workshop", "tutorial"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]

dependencies = []

[dependency-groups]
# Dependencies for running all examples
examples = ["requests>=2.32", "aiohttp>=3.13"]

# Development dependencies
dev = ["pytest>=9.0", "pytest-asyncio>=1.3", "mypy>=1.19", "ruff>=0.14", "types-requests>=2.32"]

[project.urls]
Homepage = "https://github.com/1995parham-teaching/python101"
Documentation = "https://1995parham-teaching.github.io/python101/"
Repository = "https://github.com/1995parham-teaching/python101"
Issues = "https://github.com/1995parham-teaching/python101/issues"

# Mypy configuration
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["src/10-testing"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
